# OC_Python_P7

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  algorithms_breakdown.md  index.html  package.json  tsconfig.json
app/: debug.py  main.py  models.py  requirements.txt
app/algorithms/: __init__.py  brute_force.py  dynamic.py  genetic.py  greedy.py
app/utils/: factory.py  input.py  output.py  profiling.py  py_factory.py  rs_factory.py
datasets/: dataset0.csv
demo/: style.css
expected_solutions/: dataset1.txt
exports/python/: dataset1_Greedy_result.txt
knapsack_rs/: Cargo.toml  pyproject.toml
knapsack_rs/src/: brute_force.rs  dp.rs  greedy.rs  item_factory.rs  lib.rs  models.rs  utils.rs
presentation/: algorithms_breakdown.md  graphs.py
project_data/datasets/: dataset0.csv
project_data/expected_solutions/: dataset2.txt
project_data/results/: dataset0_Dynamic programming - Python.txt  (+19 more)
python_implementation/: bruteforce.py  main.py  models.py  optimized.py  typehints.py  utils.py
rslib/: Cargo.toml  pyproject.toml
rslib/src/: brute_force.rs  dp.rs  greedy.rs  item_factory.rs  lib.rs  models.rs  temp.rs  utils.rs
rust_implementation/: Cargo.toml
src_python/: main.py  models.py  utils.py
src_rust/: Cargo.toml  brute_force.rs  dp.rs  lib.rs  models.rs
src_typescript/: algorithm.ts  dom.ts  eventHandlers.ts  index.ts  models.ts  state.js  state.ts  utils.ts
static/: style.css
web_demo/: algorithm.js  eventHandlers.js  index.js  package-lock.json  package.json  problem_data.js  state.js  style.css  tsconfig.json  utils.js
(+50 files in other folders)
